--- a/02/my-first-app/src/app/app.component.html
+++ b/02/my-first-app/src/app/app.component.html
@@ -1,2 +1,16 @@
-<input type="text" [(ngModel)]="name">
-<p>{{name}}</p>
+<div class="contauner">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>Header</h3>
+            <hr>
+            <!-- <app-servers></app-servers> -->
+            <div app-servers></div>
+
+            <input type="text" [(ngModel)]="name">
+            <p>{{name}}</p>
+
+        </div>
+    </div>
+</div>
+
+
