--- a/02/my-first-app/src/app/server/server.component.html
+++ b/02/my-first-app/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>Server ID: {{serverId}}, and the server is {{serverStatus}}</p>
+<p>Server ID: {{serverId}}, and the server is {{getServerStatus()}}</p>
