--- a/02/my-first-app/src/app/servers/servers.component.html
+++ b/02/my-first-app/src/app/servers/servers.component.html
@@ -1,2 +1,13 @@
-<button class="btn btn-primary" [disabled]="!allowNewServer">Add server</button>
+<label>Server Name</label>
+<input 
+    type="text" 
+    class="form-control"
+    (input)="onUpdateServerName($event)">
+<button 
+    class="btn btn-primary" 
+    [disabled]="!allowNewServer"
+    (click)="onCreatedServer()">Add server</button>
+<p [innerText]="!allowNewServer"></p>
+<p [innerText]="serverCreationStatus"></p>
+<p [innerText]="serverName"></p>
 <app-server></app-server>
